Fixed import songs button on mobile

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -13,7 +13,7 @@
   margin-left: 10px;
   user-select: none;
   cursor: pointer;
-  padding-right: 19px;
+  padding-right: 18.5px;
 }
 
 .add-new-playlist-card > img {
